k8s/interactive-video-catalog/api/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: "interactive-video-catalog-api-svc"
  labels:
    app: "interactive-video-catalog-api"
spec:
  selector:
      app: "interactive-video-catalog-api"
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
